Project upgrade of dependencies / gradle build / Jakarta